--- a/headerStyle.css
+++ b/headerStyle.css
@@ -3,9 +3,8 @@
     padding: 0;
 }
 header {
-    display: block;
+    display: inline-grid;
     background-color: rgb(19, 12, 29);
-    transition: transform 2s ease-in-out;
 }
 
 #text {
