--- a/headerStyle.css
+++ b/headerStyle.css
@@ -1,15 +1,22 @@
 * {
     margin: 0;
     padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 header {
-    display: inline-grid;
     background-color: rgb(19, 12, 29);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 50px;
+    transition: top 0.3s;
 }
 
 #text {
     color: #f7fffc;
-    padding: 20px;
+    margin: 5px;
     text-align: center;
 }
 
@@ -17,11 +24,4 @@ header {
     border:none;
     width:100%;
     height:auto;
-}
-
-.new {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
 }
